--- a/SourceLiveDemoProject/Appsettings.json
+++ b/SourceLiveDemoProject/Appsettings.json
@@ -1,4 +1,6 @@
 {
   "BaseUrl": "https://www.saucedemo.com/v1/index.html",
-  "Browser": "chrome"
+  "Browser": "chrome",
+  "Mobile Device Name": "iPhone X",
+  "Headless": true
 }
