--- a/SourceLiveDemoProject/SourceLiveDemoProject.csproj
+++ b/SourceLiveDemoProject/SourceLiveDemoProject.csproj
@@ -25,7 +25,7 @@
     <PackageReference Include="Selenium.WebDriver" Version="4.25.0" />
     <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="129.0.6668.10000" />
     <PackageReference Include="Selenium.WebDriver.GeckoDriver" Version="0.35.0" />
-    <PackageReference Include="Selenium.WebDriver.MSEdgeDriver" Version="131.0.2895-pre" />
+    <PackageReference Include="Selenium.WebDriver.MSEdgeDriver" Version="129.0.2792.89" />
     <PackageReference Include="SpecFlow.NUnit" Version="4.0.31-beta" />
   </ItemGroup>
 
